--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
             </div>
 
             <div class="home__social">
-                <a href="https://www.linkedin.com/in/nikita-singh-b73a17253/" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://www.linkedin.com/in/nikita-singh-b73a17253/" class="home__social-icon"><i
+                        class='bx bxl-linkedin'></i></a>
 
-                <a href="https://leetcode.com/u/snikita93021/" class="home__social-icon"><i class='bx bx-code-alt' ></i></a>
-                        
+                <a href="https://leetcode.com/u/snikita93021/" class="home__social-icon"><i
+                        class='bx bx-code-alt'></i></a>
+
                 <a href="https://github.com/nikita0125" class="home__social-icon"><i class='bx bxl-github'></i></a>
-                
+
             </div>
 
 
@@ -211,7 +213,7 @@
                             <h2>Reddit_clone App</h2>
                             <p> A Flutter-based Reddit clone enabling users to explore subreddits,communities,
                                 and posts.
-        </p>
+                            </p>
                         </div>
 
                     </div>
@@ -289,7 +291,7 @@
                     <input type="text" placeholder="Name" class="contact__input">
                     <input type="mail" placeholder="Email" class="contact__input">
                     <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
-                    <input type="button" value="Enviar" class="contact__button button">
+                    <input type="button" value="Enter" class="contact__button button">
                 </form>
             </div>
         </section>
@@ -300,8 +302,9 @@
         <p class="footer__title">Nikita</p>
         <div class="footer__social">
             <a href="https://in.pinterest.com/snikita93021/" class="footer__icon"><i class='bx bxl-pinterest'></i></a>
-            <a href="https://www.instagram.com/nikita_0125_singh/" class="footer__icon"><i class='bx bxl-instagram'></i></a>
-            <a href= "https://x.com/NIKITA_0125" class="footer__icon"><i class='bx bxl-twitter'></i></a>
+            <a href="https://www.instagram.com/nikita_0125_singh/" class="footer__icon"><i
+                    class='bx bxl-instagram'></i></a>
+            <a href="https://x.com/NIKITA_0125" class="footer__icon"><i class='bx bxl-twitter'></i></a>
         </div>
         <p class="footer__copy">&#169; Nikita. All\ rights reserved</p>
     </footer>
